доделал планшетную версию адаптива

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,9 @@
             </a>
           </li>
         </ul>
+        <div class="header-burger">
+          <span></span>
+        </div>
       </nav>
     </header>
     
@@ -53,13 +56,13 @@
                 NFT marketplace UI created with Anima for Figma. Collect, buy and sell
                 art from more than 20k NFT artists.
               </p>
+              <div class="additional-info-wrapper">
               <a href="#" class="hero-btn btn base-text">
                 <svg>
                   <use xlink:href="../images/symbol-defs.svg#icon-RocketLaunch"></use>
                 </svg>
                 Get Started
               </a>
-              <div class="additional-info-wrapper">
                 <div class="additional-info">
                   <p class="quantity">240k+</p>
                   <p class="quantity-content">Total Sale</p>
@@ -75,14 +78,14 @@
               </div>
             </div>
             <div class="artist-card">
-              <img src="../images/hero-img.webp" alt="" />
+              <img src="../images/hero-img.webp" alt="" class="artist-card__img" />
               <div class="artist-card__wrapper-bottom">
-                <h5 class="artist-card__title subtitle">Space Walking</h5>
+                <h5 class="artist-card__title title-3">Space Walking</h5>
                 <div class="artist-card__wrapper">
                   <img
                     src="../images/Avatar Placeholder-12.png"
                     alt=""
-                    class="artist-card__img"
+                    class="artist-card__icon"
                   />
                   <p class="artist-card__name base-text">Animakid</p>
                 </div>
@@ -164,43 +167,51 @@
                           <p>1</p>
                       </div>
                       <img src="../images/Avatar Placeholder.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">Keepitreal</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>2</p>
                       </div>
                       <img src="../images/Avatar Placeholder-1.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">DigiLab</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>3</p>
                       </div>
                       <img src="../images/Avatar Placeholder-2.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">GravityOne</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>4</p>
                       </div>
                       <img src="../images/Avatar Placeholder-3.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">Juanie</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
+                      </div>
                       </div>
                   </div>
                   <div class="creators-card">
@@ -208,88 +219,104 @@
                           <p>5</p>
                       </div>
                       <img src="../images/Avatar Placeholder-4.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">BlueWhale</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>6</p>
                       </div>
                       <img src="../images/Avatar Placeholder-5.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">mr fox</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>7</p>
                       </div>
                       <img src="../images/Avatar Placeholder-6.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">Shroomie</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>8</p>
                       </div>
                       <img src="../images/Avatar Placeholder-7.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">robotica</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>9</p>
                       </div>
                       <img src="../images/Avatar Placeholder-19.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">RustyRobot</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>10</p>
                       </div>
                       <img src="../images/Avatar Placeholder-12.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">animakid</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>11</p>
                       </div>
                       <img src="../images/Avatar Placeholder-13.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">Dotgu</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
                   </div>
+                  </div>
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>12</p>
                       </div>
                       <img src="../images/Avatar Placeholder-15.webp" alt="">
+                      <div class="wrapper-inner">
                       <h3 class="creators-card__title title-3">Ghiblier</h3>
                       <div class="creators-card__total-wrapper">
                           <p class="creators-card__sales base-text">Total Sales:</p>
                           <p class="creators-card__price base-text">34.53 ETH</p>
                       </div>
+                  </div>
                   </div>
               </div>
           </div>
@@ -450,7 +477,7 @@
             </div>
           </div>
         </div>
-        <img src="../images/NFT-highlight.webp" alt="" />
+        <div class="discover-bg"></div>
       </section>
       
       <section class="works">
