доделал планшетную и мобильную вёрстку

--- a/app/index.html
+++ b/app/index.html
@@ -162,6 +162,7 @@
                   View Rankings
                 </a>
                 <div class="creators__pustoi"></div>
+                <div class="box-card">
                   <div class="creators-card">
                       <div class="creators-card__number base-text">
                           <p>1</p>
@@ -318,6 +319,7 @@
                       </div>
                   </div>
                   </div>
+                  </div>
               </div>
           </div>
       </section>
@@ -415,6 +417,7 @@
               See All
             </a>
             <div class="discover__pustoi"></div>
+            <div class="discover-box">
             <div class="discover-card">
               <img src="../images/NFT-image-1.webp" alt="" />
               <div class="discover-card__artist-wrapper">
@@ -476,6 +479,7 @@
               </div>
             </div>
           </div>
+          </div>
         </div>
         <div class="discover-bg"></div>
       </section>
@@ -489,29 +493,35 @@
           <div class="works-wrapper">
             <div class="works-card">
               <img src="../images/works-1.webp" alt="" />
+              <div class="works-card-wrapper">
               <h5 class="works-card__title title-3">Setup Your wallet</h5>
               <p class="text base-text">
                 Set up your wallet of choice. Connect it to the Animarket by clicking
                 the wallet icon in the top right corner.
               </p>
             </div>
+            </div>
       
             <div class="works-card">
               <img src="../images/works-2.webp" alt="" />
+              <div class="works-card-wrapper">
               <h5 class="works-card__title title-3">Create Collection</h5>
               <p class="text base-text">
                 Upload your work and setup your collection. Add a description, social
                 links and floor price.
               </p>
             </div>
+            </div>
       
             <div class="works-card">
               <img src="../images/works-3.webp" alt="" />
+              <div class="works-card-wrapper">
               <h5 class="works-card__title title-3">Start Earning</h5>
               <p class="text base-text">
                 Choose between auctions and fixed-price listings. Start earning by
                 selling your NFTs or trading others.
               </p>
+            </div>
             </div>
           </div>
         </div>
